Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38378

QMdiarea subwindow does not remember its last focus widget when adding new QMdiSubWindow

XMLWordPrintable

    • 0240110c58f0d6b694445f6685f0f77b14b769d8 (dev, 30.7.2014, 5.4)

      if a Subwindow in a QMdiaArea is created with few child input widgets it always assigns focus to first widget on activation after a new subwindow has been created.

      Attached example reproduces this.

      • Run the attached example qtbug38378.zip and click on "new subwindow" menu
      • Note new subwindow has line edit #2 focussed
      • Click on "new subwindow" again to create another subwindow
      • Click on any line edit to give focus to that
      • Now click on first subwindow's title bar to activate, you will see first line edit has the focus.

        1. main.cpp
          2 kB
        2. qtbug38378_focus_stack.txt
          14 kB
        3. qtbug38378.zip
          2 kB
        4. qtbug38378_diag.patch
          8 kB
        5. qtbug38378_log.txt
          17 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes